package protobufPhpProtobuf;
import "php.proto";
option (php.package) = "Benchmark.Converters.ProtobufPhpProtobuf";

message Restaurant {
  required int32 id = 1;
  required string name = 2;
  optional string description = 3;
  optional string menuLink = 4;
  optional string imageLink = 5;
  required Contact contact = 6;
  required Address address = 7;
  repeated OpeningTime openingTime = 8;
}

message Contact {
  required int32 id = 1;
  optional string email = 2;
  optional string web = 3;
  optional string facebook = 4;
  optional string telephone = 5;
}

message Address {
  required int32 id = 1;
  optional float latitude = 2;
  optional float longitude = 3;
  optional string street = 4;
  optional string postal_code = 5;
  optional string country = 6;
  optional string locality = 7;
}

message OpeningTime {
  required int32 id = 1;
  required Restaurant restaurant = 2;
  optional string day = 3;
  optional string start = 4;
  optional string end = 5;
}

message RestaurantCollection {
  repeated Restaurant restaurant = 1;
  repeated Error error = 2;
  required string status = 3;
  required int32 code = 4;
  required int32 totalNumber = 5;
  optional int32 page = 6;
  optional int32 pageSize = 7;
  optional int32 totalPages = 8;
}

message Error {
  required int32 id = 1;
  required string text = 2;
}
